src/test/ui/object-lifetime/object-lifetime-default-ambiguous.stderr
error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/object-lifetime-default-ambiguous.rs:33:27
   |
LL | fn a<'a,'b>(t: Ref2<'a,'b,Test>) {
   |                           ^^^^

error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/object-lifetime-default-ambiguous.rs:37:14
   |
LL | fn b(t: Ref2<Test>) {
   |              ^^^^

error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/object-lifetime-default-ambiguous.rs:53:15
   |
LL | fn f(t: &Ref2<Test>) {
   |               ^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0228`.
